packages/candle/check_output.txt
    Blocking waiting for file lock on build directory
    Checking fluent_ai_candle v0.1.0 (/Volumes/samsung_t9/fluent-ai/packages/candle)
error[E0432]: unresolved import `responses::completion::CompletionChunk`
   --> packages/candle/src/domain/http/mod.rs:103:51
    |
103 |             CompletionResponse, CompletionChoice, CompletionChunk, ChunkChoice, ChunkDelta,
    |                                                   ^^^^^^^^^^^^^^^
    |                                                   |
    |                                                   no `CompletionChunk` in `domain::http::responses::completion`
    |                                                   help: a similar name exists in the module: `CompletionChoice`
    |
    = help: consider importing this type alias through its public re-export instead:
            crate::domain::context::CompletionChunk

For more information about this error, try `rustc --explain E0432`.
error: could not compile `fluent_ai_candle` (lib) due to 1 previous error
